deploy/kubernetes/ingress/staging/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: know-mini
  namespace: staging
  labels:
    app.kubernetes.io/name: know-mini-ingress
    app.kubernetes.io/component: front-tier
    app.kubernetes.io/part-of: know-mini
    app.kubernetes.io/version: latest
    app.kubernetes.io/instance: all
spec:
  ingressClassName: nginx
  rules:
  - host: staging.know.id
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: know-client
            port:
              number: 3000
